# serde_flat_path

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
src/: attr.rs  lib.rs  util.rs
tests/: basic_enums.rs  basic_structs.rs  complex_enums.rs  propogate_serde_attrs.rs
