[package]
name = "serde_flat_path"
version = "0.1.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
serde = {version="1.0.159", features=["derive"]}

