[package]
name = "serde_flat_path"
version = "0.1.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features=["full"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
serde = {version="1.0.159", features=["derive"]}
serde_json = "1.0.95"
