[package]
name = "serde_flat_path"
version = "0.1.1"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
description = "A macro for expanding long structure chains within serde"
license = "MIT"
edition = "2021"
repository = "https://github.com/jmeggitt/serde_flat_path"
keywords = ["serde", "flatten"]
readme = "readme.md"

[lib]
proc-macro = true

[features]
default = []
allow_overlap = []

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
